components/kargo/kargo/templates/api/service.yaml
---
# Source: kargo/templates/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-api
  namespace: kargo-kargo
  labels:
    helm.sh/chart: kargo-0.1.0
    app.kubernetes.io/name: kargo
    app.kubernetes.io/instance: kargo
    app.kubernetes.io/version: "v0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kargo
    app.kubernetes.io/instance: kargo
    app.kubernetes.io/component: api
